--- a/KhanKluay/Assembly-CSharp.csproj
+++ b/KhanKluay/Assembly-CSharp.csproj
@@ -52,8 +52,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Bullet.cs" />
+     <Compile Include="Assets\Bullets.cs" />
      <Compile Include="Assets\CamaraContorl.cs" />
      <Compile Include="Assets\ControlPlayer.cs" />
+     <Compile Include="Assets\enime.cs" />
      <Compile Include="Assets\GameContorler.cs" />
      <Compile Include="Assets\ItemLife.cs" />
      <Compile Include="Assets\ItemScore.cs" />
