--- a/KhanKluay/Assembly-CSharp.csproj
+++ b/KhanKluay/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BossStatus.cs" />
      <Compile Include="Assets\Bullet.cs" />
      <Compile Include="Assets\CamaraContorl.cs" />
      <Compile Include="Assets\ControlPlayer.cs" />
